--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -48,187 +48,173 @@
         </style>
     </head>
     <body>
-        <div class="container-1">
-            <form
-                method="GET"
-                action="{{ url_for('users') }}"
-                style="text-align: center; margin-bottom: 20px"
-            >
-                <input
-                    type="hidden"
-                    name="csrf_token"
-                    value="{{ csrf_token() }}"
-                />
-                <input
-                    type="text"
-                    name="search"
-                    placeholder="Search by username..."
-                    value="{{ request.args.get('search', '') }}"
-                    style="padding: 8px; width: 200px"
-                />
-                <button class="btn" type="submit" style="padding: 8px 12px">
-                    Search
-                </button>
-            </form>
+        <form
+            method="GET"
+            action="{{ url_for('users') }}"
+            style="text-align: center; margin-bottom: 20px"
+        >
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+            <input
+                type="text"
+                name="search"
+                placeholder="Search by username..."
+                value="{{ request.args.get('search', '') }}"
+                style="padding: 8px; width: 200px"
+            />
+            <button class="btn" type="submit" style="padding: 8px 12px">
+                Search
+            </button>
+        </form>
 
-            <table
-                border="1"
-                cellpadding="8"
-                cellspacing="0"
-                style="width: 100%; margin-bottom: 20px"
-            >
-                <thead>
-                    <tr>
-                        <th>username</th>
+        <table
+            border="1"
+            cellpadding="8"
+            cellspacing="0"
+            style="width: 100%; margin-bottom: 20px"
+        >
+            <thead>
+                <tr>
+                    <th>username</th>
 
-                        <th>banned</th>
-                        <th>actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for item in users %}
-                    <tr>
-                        <td>
-                            <a
-                                href="{{ url_for('profile', username=item.user.username) }}"
-                                >{{ item.user.username }}</a
-                            >
-                        </td>
+                    <th>banned</th>
+                    <th>actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for item in users %}
+                <tr>
+                    <td>
+                        <a
+                            href="{{ url_for('profile', username=item.user.username) }}"
+                            >{{ item.user.username }}</a
+                        >
+                    </td>
 
-                        <td>
-                            {% if item.banned %} yes {% else %} nah {% endif %}
-                        </td>
-                        <td>
-                            <div style="display: flex; gap: 10px">
-                                {% if item.banned %}
+                    <td>{% if item.banned %} yes {% else %} nah {% endif %}</td>
+                    <td>
+                        <div style="display: flex; gap: 10px">
+                            {% if item.banned %}
 
-                                <form
-                                    method="post"
-                                    action="{{ url_for('unban_user', user_id=item.user.id) }}"
-                                >
-                                    <button class="btn" type="submit">
-                                        unban
-                                    </button>
-                                    <input
-                                        type="hidden"
-                                        name="csrf_token"
-                                        value="{{ csrf_token() }}"
-                                    />
-                                </form>
-                                {% else %}
-                                <form
-                                    method="post"
-                                    action="{{ url_for('ban_user', user_id=item.user.id) }}"
-                                >
-                                    <input
-                                        type="hidden"
-                                        name="csrf_token"
-                                        value="{{ csrf_token() }}"
-                                    />
-                                    <input
-                                        type="hidden"
-                                        name="reason"
-                                        value="Violation"
-                                    />
-                                    <button class="btn" type="submit">
-                                        ban
-                                    </button>
-                                </form>
-                                {% endif %}
-                                <form
-                                    method="post"
-                                    action="{{ url_for('ban_ip') }}"
-                                >
-                                    <input
-                                        type="hidden"
-                                        name="csrf_token"
-                                        value="{{ csrf_token() }}"
-                                    />
-                                    <input
-                                        type="hidden"
-                                        name="ip_address"
-                                        value="{{ item.user.ip_address }}"
-                                    />
-                                    <button class="btn" type="submit">
-                                        ban ip
-                                    </button>
-                                </form>
-                                <form
-                                    method="post"
-                                    action="{{ url_for('delete_user', user_id=item.user.id) }}"
-                                    onsubmit="
-                                        return confirm(
-                                            'Are you sure you want to delete this user?',
-                                        );
-                                    "
-                                >
-                                    <button class="btn" type="submit">
-                                        delete
-                                    </button>
-                                </form>
-                            </div>
                             <form
-                                method="POST"
-                                id="assign-form-{{ item.user.id }}"
+                                method="post"
+                                action="{{ url_for('unban_user', user_id=item.user.id) }}"
+                            >
+                                <button class="btn" type="submit">unban</button>
+                                <input
+                                    type="hidden"
+                                    name="csrf_token"
+                                    value="{{ csrf_token() }}"
+                                />
+                            </form>
+                            {% else %}
+                            <form
+                                method="post"
+                                action="{{ url_for('ban_user', user_id=item.user.id) }}"
+                            >
+                                <input
+                                    type="hidden"
+                                    name="csrf_token"
+                                    value="{{ csrf_token() }}"
+                                />
+                                <input
+                                    type="hidden"
+                                    name="reason"
+                                    value="Violation"
+                                />
+                                <button class="btn" type="submit">ban</button>
+                            </form>
+                            {% endif %}
+                            <form
+                                method="post"
+                                action="{{ url_for('ban_ip') }}"
+                            >
+                                <input
+                                    type="hidden"
+                                    name="csrf_token"
+                                    value="{{ csrf_token() }}"
+                                />
+                                <input
+                                    type="hidden"
+                                    name="ip_address"
+                                    value="{{ item.user.ip_address }}"
+                                />
+                                <button class="btn" type="submit">
+                                    ban ip
+                                </button>
+                            </form>
+                            <form
+                                method="post"
+                                action="{{ url_for('delete_user', user_id=item.user.id) }}"
                                 onsubmit="
                                     return confirm(
-                                        'Are you sure you want to assign this badge to this user?',
+                                        'Are you sure you want to delete this user?',
                                     );
                                 "
                             >
-                                <div
-                                    class="dropdown"
-                                    style="
-                                        margin-top: 10px;
-                                        position: relative;
-                                        display: inline-block;
-                                    "
+                                <button class="btn" type="submit">
+                                    delete
+                                </button>
+                            </form>
+                        </div>
+                        <form
+                            method="POST"
+                            id="assign-form-{{ item.user.id }}"
+                            onsubmit="
+                                return confirm(
+                                    'Are you sure you want to assign this badge to this user?',
+                                );
+                            "
+                        >
+                            <div
+                                class="dropdown"
+                                style="
+                                    margin-top: 10px;
+                                    position: relative;
+                                    display: inline-block;
+                                "
+                            >
+                                <button
+                                    type="button"
+                                    class="btn"
+                                    onclick="toggleDropdown({{ item.user.id }})"
                                 >
-                                    <button
-                                        type="button"
-                                        class="btn"
-                                        onclick="toggleDropdown({{ item.user.id }})"
-                                    >
-                                        assign badge
-                                    </button>
-                                    <input
-                                        type="hidden"
-                                        name="csrf_token"
-                                        value="{{ csrf_token() }}"
-                                    />
-
-                                    <div
-                                        class="dropdown-content"
-                                        id="dropdown-content-{{ item.user.id }}"
-                                    >
-                                        {% for badge in badges %}
-                                        <div
-                                            class="dropdown-item"
-                                            style="
-                                                padding: 8px;
-                                                cursor: pointer;
-                                            "
-                                            onclick="toggleBadge({{ item.user.id }}, '{{ badge.id }}', {{ 'true' if badge.id in item.user.badges else 'false' }})"
-                                        >
-                                            {{ badge.name }}
-                                        </div>
-                                        {% endfor %}
-                                    </div>
-                                </div>
-
-                                <!-- Hidden input to store selected badge -->
+                                    assign badge
+                                </button>
                                 <input
                                     type="hidden"
-                                    id="badge-input-{{ item.user.id }}"
-                                    name="badge"
+                                    name="csrf_token"
+                                    value="{{ csrf_token() }}"
                                 />
-                            </form>
-                        </td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
+
+                                <div
+                                    class="dropdown-content"
+                                    id="dropdown-content-{{ item.user.id }}"
+                                >
+                                    {% for badge in badges %}
+                                    <div
+                                        class="dropdown-item"
+                                        style="padding: 8px; cursor: pointer"
+                                        onclick="toggleBadge({{ item.user.id }}, '{{ badge.id }}', {{ 'true' if badge.id in item.user.badges else 'false' }})"
+                                    >
+                                        {{ badge.name }}
+                                    </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+
+                            <!-- Hidden input to store selected badge -->
+                            <input
+                                type="hidden"
+                                id="badge-input-{{ item.user.id }}"
+                                name="badge"
+                            />
+                        </form>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+
         <!-- Pagination -->
         <div class="pagination" style="text-align: center">
             {% if page > 1 %}
