--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,7 +21,7 @@
                     {% include 'svgs/menu.html' %}
                 </div>
                 <div class="dropdown-content" id="dropdownContent">
-                    <a href="info">info</a>
+                    <a href="https://miaw.cc/info">info</a>
                     <a href="{{ url_for('index') }}">create paste</a>
                     {% if current_user %}
                     <a
