--- a/templates/login.html
+++ b/templates/login.html
@@ -6,10 +6,10 @@
     <form method="post">
         <div id="login-register">
             <div>
-                <input type="text" name="username" />
+                <input type="text" name="username" placeholder="username" />
             </div>
             <div>
-                <input type="password" name="password" />
+                <input type="password" name="password" placeholder="password" />
             </div>
         </div>
         <div>
