--- a/templates/register.html
+++ b/templates/register.html
@@ -6,16 +6,16 @@
     <form method="post">
         <div id="login-register">
             <div>
-                <input type="text" name="username" placeholder="Username" />
+                <input type="text" name="username" placeholder="username" />
             </div>
             <div>
-                <input type="password" name="password" placeholder="Password" />
+                <input type="password" name="password" placeholder="password" />
             </div>
             <div>
                 <input
                     type="text"
                     name="invite_code"
-                    placeholder="Invite Code"
+                    placeholder="invite code"
                     required
                 />
             </div>
