update accept terms

--- a/templates/accept_terms.html
+++ b/templates/accept_terms.html
@@ -5,13 +5,14 @@
         <meta charset="UTF-8" />
     </head>
     <body>
-        <div class="container-1">
+        <div class="container-2">
             <h1>accept new terms</h1>
             <p>
                 the <a href="https://miaw.cc/privacy">privacy policy</a> or
                 <a href="https://miaw.cc/terms">terms of service</a> has been
-                updated! by continuing to use the site, you agree to these
-                changes.
+                updated! by continuing to use the site, and clicking the button
+                below, you agree to these changes. it's recommended that you
+                read them carefully.
             </p>
             <form method="POST">
                 <input
@@ -19,7 +20,7 @@
                     name="csrf_token"
                     value="{{ csrf_token() }}"
                 />
-                <button class="btn" type="submit">Accept</button>
+                <button class="btn" type="submit">accept</button>
             </form>
         </div>
         <script>
@@ -28,7 +29,7 @@
                 .addEventListener("submit", function (e) {
                     if (!document.getElementById("accept").checked) {
                         e.preventDefault();
-                        alert("You must accept the terms to continue.");
+                        alert("you must accept the terms to continue.");
                     }
                 });
         </script>
