--- a/templates/view_paste.html
+++ b/templates/view_paste.html
@@ -7,7 +7,7 @@
 
         <div style="display: flex; justify-content: space-between">
             <a href="#" onclick="editPaste(event, '{{ paste.id }}')"
-                ><button class="btn">Edit this paste</button></a
+                ><button class="btn">edit</button></a
             >
 
             <div class="paste-stats">
