--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %} {% block content %}
 <div class="container-2">
     {% if error %}
-    <p style="color: red">{{ error }}</p>
+    <p>{{ error }}</p>
     {% endif %}
     <form method="post">
         <div id="login-register">
