--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,4 +1,12 @@
 {% extends "layout.html" %} {% block content %}
+
+<head>
+    <meta
+        property="og:description"
+        content="miaw.cc - a lightweight social pastebin"
+    />
+</head>
+
 <!doctype html>
 <html>
     <head>
