--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,9 +2,10 @@
 <html lang="en" data-theme="light">
     <head>
         <meta charset="UTF-8" />
-        <meta name="theme-color" content="#fce49c" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>miaw.cc</title>
+        <meta property="og:type" content="website" />
+        <meta name="theme-color" content="#8a8a8a" />
+        <title>{% block title %} miaw.cc {% endblock %}</title>
         <link
             rel="stylesheet"
             href="{{ url_for('static', filename='style.css') }}"
