--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,10 @@
+<head>
+    <meta
+        property="og:description"
+        content="miaw.cc - a lightweight social pastebin"
+    />
+</head>
+
 <div id="content">
     {% extends "layout.html" %} {% block content %}
     <div class="container-1">
