--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,12 @@
 {% extends "layout.html" %} {% block content %}
+
+<head>
+    <meta
+        property="og:description"
+        content="miaw.cc - a lightweight social pastebin"
+    />
+</head>
+
 <div class="container-2">
     {% if error %}
     <p>{{ error }}</p>
