--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,6 +5,10 @@
         property="og:description"
         content="miaw.cc - a lightweight social pastebin"
     />
+    <meta
+        property="og:image"
+        content="{{ url_for('static', filename='favicon.webp' }}"
+    />
 </head>
 
 <!doctype html>
