--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     />
     <meta
         property="og:image"
-        content="{{ url_for('static', filename='favicon.webp' }}"
+        content="{{ url_for('static', filename='favicon.webp') }}"
     />
 </head>
 
