--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
     />
     <meta
         property="og:image"
-        content="{{ url_for('static', filename='favicon.webp' }}"
+        content="{{ url_for('static', filename='favicon.webp') }}"
     />
 </head>
 
