--- a/static/style.css
+++ b/static/style.css
@@ -170,9 +170,11 @@ input {
     padding: 20px;
     border: 1px solid var(--color-border);
     text-align: center;
+    max-width: 200px;
 }
 
 #popup button {
+    margin-top: 5px;
     background: linear-gradient(
         to bottom,
         var(--color-hover-start),
@@ -419,4 +421,30 @@ th {
     gap: 10px;
     align-items: center;
     justify-content: space-between;
+}
+
+#meta {
+    display: flex;
+    gap: 10px;
+    padding: 8px;
+    width: 100%;
+    justify-content: space-between;
+}
+
+#meta-content {
+    width: 100%;
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+#meta-content input {
+    width: 100%;
+    max-width: 600px;
+}
+
+#meta-content textarea {
+    height: 100%;
+    min-height: 80px;
 }
