--- a/templates/paste/edit_paste.html
+++ b/templates/paste/edit_paste.html
@@ -26,8 +26,8 @@
         >
 {{ paste.content }}</textarea
         >
-        <div id="meta">
-            <div id="meta-content">
+        <div class="meta">
+            <div class="meta-content">
                 <input
                     type="text"
                     id="page_title"
@@ -50,7 +50,7 @@
                     placeholder="meta desc theme color here!"
                 />
             </div>
-            <div id="meta-content">
+            <div class="meta-content">
                 <input
                     type="text"
                     id="favicon_url"
