--- a/static/style.css
+++ b/static/style.css
@@ -423,7 +423,7 @@ th {
     justify-content: space-between;
 }
 
-#meta {
+.meta {
     display: flex;
     gap: 10px;
     padding: 8px;
@@ -431,7 +431,7 @@ th {
     justify-content: space-between;
 }
 
-#meta-content {
+.meta-content {
     width: 100%;
     max-width: 400px;
     display: flex;
@@ -439,12 +439,12 @@ th {
     gap: 10px;
 }
 
-#meta-content input {
+.meta-content input {
     width: 100%;
     max-width: 600px;
 }
 
-#meta-content textarea {
+.meta-content textarea {
     height: 100%;
     min-height: 80px;
 }
