--- a/templates/user/edit_profile.html
+++ b/templates/user/edit_profile.html
@@ -29,9 +29,7 @@
 
 
                     </div>
-                    <textarea name="bio" id="bio" rows="10" cols="20">
-                        {{ user.bio }}</textarea
-                    >
+                    <textarea name="bio" id="bio" rows="10" cols="20">{{ user.bio }}</textarea>
                 </div>
             </div>
             <br>
@@ -51,9 +49,7 @@
                 id="custom_css"
                 rows="5"
                 cols="30"
-                placeholder="enter your custom CSS here..."
-            >
-                {{ user.custom_css }}</textarea
+                placeholder="enter your custom CSS here..." >{{ user.custom_css }}</textarea
             ><br /><br />
 
 
