--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
         <form id="pasteForm" method="post">
             <textarea
                 name="content"
+                id="content"
                 placeholder="enter your text here..."
                 required
                 rows="30"
