[fix] remove erroneous indentation from SSR textareas
- updated .gitignore to include .venv

--- a/templates/user/edit_profile.html
+++ b/templates/user/edit_profile.html
@@ -29,9 +29,7 @@
 
 
                     </div>
-                    <textarea name="bio" id="bio" rows="10" cols="20">
-                        {{ user.bio }}</textarea
-                    >
+                    <textarea name="bio" id="bio" rows="10" cols="20">{{ user.bio }}</textarea>
                 </div>
             </div>
             <br>
@@ -52,9 +50,7 @@
                 rows="5"
                 cols="30"
                 placeholder="enter your custom CSS here..."
-            >
-                {{ user.custom_css }}</textarea
-            ><br /><br />
+            >{{ user.custom_css }}</textarea><br /><br />
 
 
 
